New version of BitcoinUtils